--- a/project/src/app/create-with-json/create-with-json.component.html
+++ b/project/src/app/create-with-json/create-with-json.component.html
@@ -149,7 +149,7 @@
     <div class="upload-section">
       <div class="upload-layout">
         <div class="upload-column">
-          <app-file-upload></app-file-upload>
+          <app-file-upload [viewMode]="viewMode"></app-file-upload>
         </div>
         <div class="example-column">
           <div class="example-card">
