--- a/project/src/app/dashboard/components/header/header.component.html
+++ b/project/src/app/dashboard/components/header/header.component.html
@@ -160,7 +160,7 @@
             >
           </li>
           <li>
-            <a class="new-panel-link" routerLink="/create-with-json"
+            <a class="new-panel-link" routerLink="/create-with-json" [queryParams]="{ viewMode: 'folders' }"
               >Create with Json</a
             >
           </li>
