--- a/project/src/app/dashboard/components/dashboards-list/dashboards-list.component.html
+++ b/project/src/app/dashboard/components/dashboards-list/dashboards-list.component.html
@@ -278,7 +278,7 @@
       </div>
 
       <div class="dashboards-table-container">
-        <div class="dashboards-container">
+        <div class="dashboards-inner-container">
           <!-- Show SVG when starred filter is active and there are no results -->
           <div class="no-results-container" *ngIf="starredFilterActive && (viewMode === 'folders' ? folders.length === 0 : dashboards.length === 0)">
             <svg
