--- a/project/src/app/dashboard/components/dashboards-list/dashboards-list.component.less
+++ b/project/src/app/dashboard/components/dashboards-list/dashboards-list.component.less
@@ -423,6 +423,10 @@
   overflow-x: auto;
 }
 
+.dashboards-inner-container {
+  padding: 0 0px; /* Уменьшенные отступы */
+}
+
 .dashboards-table {
   width: 100%;
   border-collapse: collapse;
